Revert "Make ::-webkit-scrollbar 0 width, fixes #255"
This reverts commit 19742f32d7c7e0eb0981c930167fe278287f024f.

--- a/bin/css/nanoscroller.less
+++ b/bin/css/nanoscroller.less
@@ -25,7 +25,6 @@
     }
     &::-webkit-scrollbar {
       visibility: hidden;
-      width: 0;
     }
   }
   > .@{paneClass} {
