--- a/bin/css/nanoscroller.scss
+++ b/bin/css/nanoscroller.scss
@@ -28,7 +28,6 @@ $contentClass: "nano-content";
 
         &::-webkit-scrollbar {
             visibility: hidden;
-            width: 0;
         }
     }
 
